samples/_failures_safe/1761392933_de6a11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4786263f.c: In function ‘main’:
./samples/SAFE/__tmp_4786263f.c:167:34: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  167 |     printf("Tokens found: %d\n", token
      |                                  ^~~~~
      |                                  Token
./samples/SAFE/__tmp_4786263f.c:167:34: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4786263f.c:167:39: error: expected ‘)’ at end of input
  167 |     printf("Tokens found: %d\n", token
      |           ~                           ^
      |                                       )
./samples/SAFE/__tmp_4786263f.c:167:5: error: expected declaration or statement at end of input
  167 |     printf("Tokens found: %d\n", token
      |     ^~~~~~
